
AC_INIT([GST-GNU lightning], [0.0])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign subdir-objects])

LIGHTNING_CONFIGURE_IF_NOT_FOUND([], [])

GST_PACKAGE_ENABLE([Lightning], [gst-lightning])

AM_PATH_GST([3.2])

AC_PROG_CC

AC_CONFIG_FILES([Makefile])

AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_OUTPUT

